--- a/Blockus-Client/Properties/Resources.en.resx
+++ b/Blockus-Client/Properties/Resources.en.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Global_password" type="System.Resources.ResXNullRef, System.Windows.Forms">
+  <data name="Configuration_Settings" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="Configuration_modifyPassword" xml:space="preserve">
+    <value>Change your password</value>
+  </data>
+  <data name="Configuration_loses" xml:space="preserve">
+    <value>Losses</value>
+  </data>
+  <data name="Configuration_boardStyle" xml:space="preserve">
+    <value>Board style</value>
   </data>
 </root>
